[tool.poetry]
name = "exploratory-analysis"
version = "0.1.0"
description = ""
authors = ["Ezra Tampubolon <ezra.tampubolon@googlemail.com>"]
readme = "README.md"
packages = [{include = "exploratory_analysis"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.1"
seaborn = "^0.12.1"
xlrd = "^2.0.1"
networkx = "^2.8.7"
python-decouple = "^3.6"
Unipath = "^1.1"
scikit-learn = "^1.2.0"
Jinja2 = "^3.1.2"
openpyxl = "^3.0.10"
python-dotenv = "^0.21.1"
jupyter = "^1.0.0"
pylint = "^2.16.1"
plotly = "^5.13.0"
tabulate = "^0.9.0"
statsmodels = "^0.13.5"
mlxtend = "^0.22.0"
nbconvert = "^7.3.1"
bokeh = "^3.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.2"
pylint = "^2.15.5"
black = "^22.10.0"
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
